public/assets/css/style.css
/* ... */
/**
 * responsive for large than 768px screen
 */

@media (min-width: 768px) {

  /** 
   * CUSTOM PROPERTY
   */

  :root {

    /**
     * TYPOGRAPHY
     */

    /* font size */
    --fontSize-1: 6.6rem;

    /**
     * SPACING
     */
     
    --section-spacing: 100px;

  }



  /**
   * REUSED STYLE
   */

  .container { max-width: 720px; }



  /**
   * HERO
   */

  .hero { text-align: left; }

  .hero .container {
    grid-template-columns: 1fr 1fr;
    align-items: center;
    gap: 40px;
  }

  .banner-outline { order: 1; }

  .hero .btn { margin-inline: 0; }



  /**
   * SERVICE
   */

  .service-item { width: 25%; }

  .service-item:not(:last-child) {
    border-inline-end: 1px solid var(--border-eerie-black);
  }



  /**
   * ABOUT
   */

  .tab-btn-item { width: 20%; }

  .tab-btn-item:not(:first-child) {
    border-inline-start: 1px solid var(--border-eerie-black);
  }

  :is([data-tab-content="interview"], [data-tab-content="exhibition"]) .grid-list {
    grid-template-columns: 1fr 1fr;
  }



  /**
   * CTA
   */

  .cta { padding-block: 40px; }

  .cta .section-title {
    display: flex;
    align-items: center;
  }

  .cta .section-title::before {
    border-radius: 0 30px 30px 0;
    width: 30px;
    height: 60px;
    flex-shrink: 0;
    margin-block-end: 0;
  }



  /**
   * PROJECTS
   */

  /* Removed min-width as it is handled by the scrolling animation logic */



  /**
   * CUSTOM CURSOR
   */

  .cursor-dot,
  .cursor-outline {
    display: block;
    position: fixed;
    top: -60px;
    left: -60px;
    transform: translate(-50%, -50%);
    border-radius: var(--radius-circle);
    z-index: 10;
    transition-property: opacity, transform;
    transition-duration: 300ms;
    transition-timing-function: ease-in-out;
    pointer-events: none;
  }

  .cursor-dot {
    width: 60px;
    height: 60px;
    background-color: var(--bg-white);
    transform: translate(-50%, -50%) scale(0.1);
  }

  .cursor-dot.hovered {
    transform: translate(-50%, -50%) scale(1);
    mix-blend-mode: exclusion;
  }

  .cursor-outline {
    width: 30px;
    height: 30px;
    border: 2px solid var(--border-white);
    opacity: 0.5;
    transition-duration: 100ms;
  }

  .cursor-outline.hovered { opacity: 0; }

}





/**
 * responsive for large than 992px screen
 */

@media (min-width: 992px) {

  /** 
   * CUSTOM PROPERTY
   */

  :root {

    /**
     * TYPOGRAPHY
     */

    /* font size */
    --fontSize-2: 7rem;

  }



  /**
   * REUSED STYLE
   */

  .container { max-width: 960px; }



  /**
   * HEADER
   */

  .header .container {
    margin-inline: 0;
    min-width: 100%;
  }

  .nav-open-btn,
  .navbar-top { display: none; }

  .navbar {
    all: unset;
    display: block;
  }

  .navbar-list {
    display: flex;
    gap: 16px;
  }

  .header .btn { display: flex; }



  /**
   * HERO
   */

  .hero .container { grid-template-columns: 1fr 0.7fr; }

  .hero .banner-outline { max-width: 366px; }

  .hero .wrapper {
    display: flex;
    align-items: center;
    gap: 30px;
  }

  .hero .btn { flex-shrink: 0; }



  /**
   * SERVICE
   */

  .service { border-block-end: 1px solid var(--border-eerie-black); }

  .service-list {
    gap: 158px;
    flex-wrap: nowrap;
  }

  .service .service-item {
    border-inline: 1px solid var(--border-eerie-black);
    border-block-end: none;
  }



  /**
   * ABOUT
   */

  .tab-content .grid-list { grid-template-columns: 1fr 1fr; }

  :is([data-tab-content="interview"], [data-tab-content="exhibition"], [data-tab-content="awward"]) .grid-list {
    grid-template-columns: repeat(3, 1fr);
  }



  /**
   * CTA
   */

  .cta .container {
    display: flex;
    align-items: center;
    justify-content: space-between;
  }

  .cta .section-title {
    text-align: left;
    gap: 30px;
  }

  .cta .btn {
    flex-shrink: 0;
    margin: 0;
  }



  /**
   * PROJECTS
   */

  /* Removed min-width as it is handled by the scrolling animation logic */



  /**
   * CONTACT
   */

  .contact-content {
    grid-template-columns: 0.8fr 1fr 0.6fr;
    gap: 30px;
    align-items: center;
  }



  /**
   * BACK TO TOP
   */

  .back-top-btn .span { display: block; }

  .back-top-btn {
    display: flex;
    align-items: center;
    gap: 10px;
  }

}





/**
 * responsive for large than 1200px screen
 */

@media (min-width: 1200px) {

  /**
   * CUSTOM PROPERTY
   */

  :root {

    /**
     * TYPOGRAPHY
     */

    /* font size */
    --fontSize-2: 9rem;
    --fontSize-4: 4rem;
    --fontSize-5: 4rem;
    --fontSize-6: 2rem;

  }



  /**
   * REUSED STYLE
   */

  .container,
  .service .container { max-width: 1200px; }

  .h1 { line-height: 1.1; }



  /**
   * HEADER
   */

  .header { padding-block: 40px; }

  .header .container { padding-inline: 60px; }

  .navbar-list { gap: 50px; }



  /**
   * HERO
   */

  .hero { padding-block-start: 160px; }

  .hero .banner-outline { max-width: 410px; }

  .hero-text { max-width: 30ch; }

  

  /**
   * ABOUT
   */

  .tab-content { padding: 60px; }

  .tab-content .grid-list { gap: 50px; }

}





/**
 * responsive for large than 1400px screen
 */

@media (min-width: 1400px) {

  /** 
   * REUSED STYLE
   */

  .container,
  .service .container { max-width: 1320px; }



  /**
   * HEADER
   */

  .header { padding-inline: 90px; }



  /**
   * HERO
   */

  .hero .container { grid-template-columns: 1fr 0.85fr; }

}
.form-wrapper {
  position: relative;
  display: inline-block;
  width: 100%;
}
.popup-message {
  position: absolute;
  bottom: -1.8em;
  left: 0;
  color: green;
  font-weight: bold;
  opacity: 0;
  visibility: hidden;
  transition: opacity 0.3s ease-in-out, visibility 0.3s;
}

.popup-message.visible {
  opacity: 1;
  visibility: visible;
}

